# aqara-sdk-rust

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: ci.yaml
aqara/: Cargo.toml  README.md
aqara-cli/: Cargo.toml  README.md
aqara/src/: lib.rs
examples/: async_positions.rs  blocking_positions.rs
src/: auth.rs  error.rs  lib.rs
src/api/: auth.rs  devices.rs  events.rs  ifttt.rs  ir.rs  linkages.rs  mod.rs  networking.rs  ota.rs  positions.rs  push.rs  raw.rs  resources.rs  scenes.rs  voice.rs
src/client/: async_client.rs  blocking_client.rs  builder.rs  mod.rs
src/transport/: async_transport.rs  blocking_transport.rs  mod.rs
src/types/: auth.rs  devices.rs  events.rs  ifttt.rs  ir.rs  linkages.rs  mod.rs  networking.rs  ota.rs  positions.rs  push.rs  resources.rs  scenes.rs  voice.rs
src/util/: mod.rs  redact.rs  retry.rs  time.rs
tests/: async_client.rs  types.rs
