[package]
name = "aqara"
description = "Aqara SDK for Rust."
version = "0.1.1"
edition = "2024"
rust-version = "1.92.0"
license = "MIT"
authors = ["lvillis <lvillis@outlook.com>"]
homepage = "https://github.com/lvillis/aqara-sdk-rust"
repository = "https://github.com/lvillis/aqara-sdk-rust"
documentation = "https://docs.rs/aqara"
readme = "README.md"
categories = ["api-bindings", "network-programming"]
keywords = ["aqara", "sdk", "iot"]
include = [
  "/Cargo.toml",
  "/README.md",
  "/LICENSE",
  "/CHANGELOG.md",
  "/src/**",
  "/examples/**",
]

[workspace.dependencies]
http = { version = "1.4.0", default-features = false, features = ["std"] }
httpdate = { version = "1.0.3", default-features = false }
md5 = { version = "0.8.0", default-features = false }
metrics = { version = "0.24.3", default-features = false }
rand = { version = "0.9.2", default-features = false, features = ["thread_rng"] }
reqwest = { version = "0.13.1", default-features = false }
rustls = { version = "0.23.35", default-features = false }
serde = { version = "1.0.228", default-features = false, features = ["derive", "std"] }
serde_json = { version = "1.0.148", default-features = false, features = ["std"] }
thiserror = { version = "2.0.17", default-features = false, features = ["std"] }
tokio = { version = "1.48.0", default-features = false }
tracing = { version = "0.1.44", default-features = false, features = ["std"] }
ureq = { version = "3.1.4", default-features = false }
url = { version = "2.5.7", default-features = false, features = ["std"] }
wiremock = { version = "0.6.5", default-features = false }

[features]
default = ["async", "rustls"]

# Core modes
async = ["dep:reqwest", "dep:tokio"]
blocking = ["dep:ureq"]

# Observability
tracing = ["dep:tracing"]
metrics = ["dep:metrics"]

# TLS selection
rustls = ["reqwest?/rustls-no-provider", "ureq?/rustls", "dep:rustls"]
native-tls = ["reqwest?/native-tls", "ureq?/native-tls"]

# Optional escape hatch (may change without notice)
unstable-raw = []

[dependencies]
http = { workspace = true }
httpdate = { workspace = true }
md5 = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }

metrics = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true, features = ["json"] }
rustls = { workspace = true, optional = true, features = ["ring", "std", "tls12"] }
tokio = { workspace = true, optional = true, features = ["rt", "time"] }
tracing = { workspace = true, optional = true }
ureq = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
wiremock = { workspace = true }

[[example]]
name = "async_positions"
path = "examples/async_positions.rs"
required-features = ["async"]

[[example]]
name = "blocking_positions"
path = "examples/blocking_positions.rs"
required-features = ["blocking"]

[package.metadata.release]
tag-prefix = ""
tag-name = "{{prefix}}{{version}}"
pre-release-commit-message = "chore: release {{crate_name}} version {{version}}"
tag-message = "chore: release {{crate_name}} version {{version}}"
pre-release-hook = ["git", "cliff", "-o", "CHANGELOG.md", "--tag", "{{version}}" ]
