[package]
name = "aqara-cli"
description = "CLI tools for aqara."
version = "0.1.0"
rust-version = "1.80.0"
edition = "2021"
license = "MIT"
authors = ["lvillis<lvillis@outlook.com>"]
categories = ["command-line-utilities", "command-line-interface", "network-programming", "api-bindings"]
keywords = ["aqara", "cli", "zigbee", "iot", "rust"]
homepage = "https://github.com/lvillis/aqara-sdk-rust"
repository = "https://github.com/lvillis/aqara-sdk-rust"
documentation = "https://docs.rs/aqara-cli"
readme = "README.md"

[[bin]]
name = "aqara"
path = "src/main.rs"

[dependencies]
aqara = { version = "0.1.0", default-features = false, features = ["china"] }
clap = { version = "4.5.16", default-features = false, features = ["std", "debug"] }
