[package]
name = "aqara"
description = "Aqara SDK for Rust."
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["lvillis<lvillis@outlook.com>"]
categories = ["api-bindings", "embedded", "hardware-support", "network-programming"]
keywords = ["aqara", "sdk", "zigbee", "iot", "rust"]
homepage = "https://github.com/lvillis/aqara-sdk-rust"
repository = "https://github.com/lvillis/aqara-sdk-rust"
documentation = "https://github.com/lvillis/aqara-sdk-rust"
readme = "../README.md"

[features]
default = ["china"]
china = []
usa = []
europe = []
korea = []
russia = []
singapore = []

[dependencies]
tracing = "0.1.40"
md5 = "0.8.0"
reqwest = { version = "0.13.1", features = ["json"] }
serde = { version = "1.0.209", features = ["derive"] }
serde_json = { version = "1.0.69", default-features = false, features = ["raw_value"] }
chrono = { version = "0.4.38" }
rand = "0.9.0-alpha.2"
